# MinFWVer

./: .gitignore  CMakeLists.txt  README.md  kernel.c  kernel_exports.yml  main.c  minfwver.h  user.c  user_exports.yml
sce_sys/livearea/contents/: template.xml
